--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo&family=Dancing+Script:wght@600&family=Lilita+One&family=Questrial&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>Tanya Ocampo Portfolio</title>
   </head>
   <body>
