--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=Archivo&family=Dancing+Script:wght@600&family=Lilita+One&family=Questrial&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <title>Tanya Ocampo Portfolio</title>
   </head>
   <body>
