--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 
     <title>Tanya Ocampo Portfolio</title>
   </head>
+    <div style="background:#ff0000; color:#xfff; padding:20px; text-align:center; font-size:14px;">
+  Portfolio refresh in progress, thanks for your patience!
+</div>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
 </html>
